; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_sys.c_sysdev_show_ulong.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_sys.c_sysdev_show_ulong.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sys_device = type { i32 }
%struct.sysdev_attribute = type { i32 }
%struct.sysdev_ext_attribute = type { i64 }

@PAGE_SIZE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"%lx\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sysdev_show_ulong(%struct.sys_device* %0, %struct.sysdev_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.sys_device*, align 8
  %5 = alloca %struct.sysdev_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.sysdev_ext_attribute*, align 8
  store %struct.sys_device* %0, %struct.sys_device** %4, align 8
  store %struct.sysdev_attribute* %1, %struct.sysdev_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.sysdev_attribute*, %struct.sysdev_attribute** %5, align 8
  %9 = call %struct.sysdev_ext_attribute* @to_ext_attr(%struct.sysdev_attribute* %8)
  store %struct.sysdev_ext_attribute* %9, %struct.sysdev_ext_attribute** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* @PAGE_SIZE, align 4
  %12 = load %struct.sysdev_ext_attribute*, %struct.sysdev_ext_attribute** %7, align 8
  %13 = getelementptr inbounds %struct.sysdev_ext_attribute, %struct.sysdev_ext_attribute* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to i64*
  %16 = load i64, i64* %15, align 8
  %17 = call i32 @snprintf(i8* %10, i32 %11, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i64 %16)
  ret i32 %17
}

declare dso_local %struct.sysdev_ext_attribute* @to_ext_attr(%struct.sysdev_attribute*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
